# libusbp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  PLATFORM_NOTES.md  README.md  libusbp.pc.in
examples/: CMakeLists.txt
examples/async_in/: async_in.cpp
examples/lsport/: lsport.cpp
examples/lsusb/: lsusb.cpp
examples/port_name/: port_name.cpp
include/: libusbp.h  libusbp.hpp
install_helper/: CMakeLists.txt  install_helper_windows.c
manual_tests/: CMakeLists.txt
manual_tests/test_async_in/: test_async_in.cpp
manual_tests/test_long_read/: test_long_read.cpp
manual_tests/test_transitions/: test_transitions.cpp
script/: todo.sh
src/: CMakeLists.txt  error.c  error_hresult.c  info.rc.in  libusbp.pc.in  libusbp_internal.h  pipe_id.c
src/linux/: async_in_transfer_linux.c  generic_handle_linux.c  serial_port_linux.c  udev_linux.c  usbfd_linux.c
src/mac/: async_in_transfer_mac.c  device_mac.c  error_mac.c  generic_handle_mac.c  serial_port_mac.c
src/windows/: generic_handle_windows.c  generic_interface_windows.c  install_helper_windows.c
test/: CMakeLists.txt  async_in_pipe_test.cpp  control_sync_test.cpp  device_test.cpp  error_message_test.cpp  generic_handle_test.cpp  generic_interface_test.cpp  read_pipe_test.cpp  serial_port_test.cpp  test_helper.h  write_pipe_test.cpp
test/drivers/: pololu.cat  usb_test_a_native.inf  usb_test_b_native.inf
test/firmware/wixel/: main.c  prepare_sdk.sh
